@@ -17,6 +17,10 @@
 package com.github.sbt
 
 import scala.sys.process.Process
+import scala.concurrent.Await
+import scala.concurrent.Future
+import scala.concurrent.duration.*
+import scala.concurrent.ExecutionContext
 
 import sbt._
 import sbt.Keys._
@@ -28,14 +32,25 @@ object JavaFormatterWrapperPlugin extends AutoPlugin {
 
   override def trigger = allRequirements
 
+  @transient
+  private val javaFormatterWrapperSbtLauncher = taskKey[File]("")
+
   override def globalSettings =
     Seq(commands += javafmt, commands += javafmtCheck, commands += javafmtAll, commands += javafmtCheckAll)
+
+  override def projectSettings = Def.settings(javaFormatterWrapperSbtLauncher := Def.taskDyn {
+    val v = sbtVersion.value
+    Def.task {
+      val Seq(launcher) = getJarFiles("org.scala-sbt" % "sbt-launch" % v).value
+      launcher
+    }
+  }.value)
 
   private val javafmtWrapperProp = "play.javafmt.wrapper"
 
   private val javafmtExports =
     Seq("api", "code", "file", "parser", "tree", "util").map { exportedPackage =>
-      s"-J--add-opens=jdk.compiler/com.sun.tools.javac.${exportedPackage}=ALL-UNNAMED"
+      s"--add-exports=jdk.compiler/com.sun.tools.javac.${exportedPackage}=ALL-UNNAMED"
     }
 
   private def javafmtCommand(name: String, delegatedCommand: String): Command =
@@ -49,8 +64,21 @@ object JavaFormatterWrapperPlugin extends AutoPlugin {
       } else {
         val extracted = Project.extract(state)
         val base = extracted.get(ThisBuild / baseDirectory)
-        val sbtArgs = Seq("sbt", "--server", s"-D$javafmtWrapperProp=true") ++ javafmtExports ++ Seq(name)
-        val exitCode = Process(sbtArgs, base).!
+        val launcher = extracted.runTask(javaFormatterWrapperSbtLauncher, state)._2
+        val props = scala.sys.props.filter(_._1 == "plugin.version").map { case (k, v) => s"-D${k}=${v}" }
+        val sbtArgs: Seq[String] = Seq(
+          Seq("java"),
+          javafmtExports,
+          Seq("-jar", launcher.getAbsolutePath, s"-D$javafmtWrapperProp=true"),
+          props,
+          Seq(name)).flatten
+
+        println(sbtArgs)
+        val exitCode = Await.result(
+          Future {
+            Process(sbtArgs, base).!
+          }(using ExecutionContext.global),
+          30.seconds)
         if (exitCode == 0) state else state.fail
       }
     }
@@ -59,4 +87,17 @@ object JavaFormatterWrapperPlugin extends AutoPlugin {
   private val javafmtCheck = javafmtCommand("javafmtCheck", "javafmtCheck")
   private val javafmtAll = javafmtCommand("javafmtAll", "all javafmtAll")
   private val javafmtCheckAll = javafmtCommand("javafmtCheckAll", "all javafmtCheckAll")
+
+  private def getJarFiles(module: ModuleID): Def.Initialize[Task[Seq[File]]] = Def.task {
+    dependencyResolution.value
+      .retrieve(
+        dependencyId = module,
+        scalaModuleInfo = scalaModuleInfo.value,
+        retrieveDirectory = csrCacheDirectory.value,
+        log = streams.value.log)
+      .left
+      .map(e => throw e.resolveException)
+      .merge
+      .distinct
+  }
 }
